--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ footer {
   display: flex;
   justify-content: center;
   padding: 5px;
-  background-color: #2b9ca2
+  background-color: blue
   color: #fff;
   clear: both;
 }
